--- a/css/style-podstrona-2.css
+++ b/css/style-podstrona-2.css
@@ -8,13 +8,12 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: beige;
   flex-direction: column;
-  /* padding-inline: 20px; */
 }
 
 header {
@@ -26,6 +25,16 @@ header {
   padding: 10px 20px;
   position: sticky;
   top: 0;
+}
+
+.nav-a {
+  font-size: 1.5em;
+  font-weight: 600;
+  color: aliceblue;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .logo,
@@ -57,7 +66,7 @@ nav ul li a {
   }
 
   nav {
-    width: 200px;
+    width: 340px;
     position: absolute;
     background: aliceblue;
     top: 10px;
