--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 0.625em 1.25em;
   position: sticky;
   top: 0;
 }
@@ -34,10 +34,10 @@ body {
   text-decoration: none;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.625em;
 }
 
-nav ul li a,
+.navigation-link,
 label {
   color: aliceblue;
 }
@@ -65,21 +65,21 @@ nav ul li a {
   }
 
   nav {
-    width: 340px;
+    width: 21.25em;
     position: absolute;
     background: aliceblue;
-    top: 10px;
-    right: 10px;
-    padding: 10px;
-    border-radius: 5px;
+    top: 0.625em;
+    right: 0.625em;
+    padding: 0.625em;
+    border-radius: 0.3125em;
     visibility: hidden;
     opacity: 0;
     transition: 0.3s ease;
   }
 
-  nav ul li a,
+  .navigation-link,
   nav label {
-    color: black;
+    color: #252525;
   }
 
   nav label {
@@ -105,7 +105,7 @@ footer {
   background-color: #252525;
 }
 
-.container-text {
+.text-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,20 +114,42 @@ footer {
   margin: 0 5em 2em 5em;
 }
 
-.header-text {
+.text-header {
   margin-top: 2em;
 }
 
-.title-text {
+.text-title {
   margin-top: 2em;
 }
 
-.subtitle-text {
+.text-subtitle {
   margin-top: 2em;
 }
 
-.paragraph-text {
+.text-paragraph {
   font-weight: 400;
   text-align: justify;
   margin-top: 2em;
+}
+
+@media screen and (max-width: 480px) {
+  .text-container {
+    margin: 0 2.5em 2em 2.5em;
+  }
+
+  .text-header {
+    margin-top: 1em;
+  }
+
+  .text-title {
+    margin-top: 1em;
+  }
+
+  .text-subtitle {
+    margin-top: 1em;
+  }
+
+  .text-paragraph {
+    margin-top: 1em;
+  }
 }
